# Renderer

./: .gitignore  AGENTS.md  CMakeLists.txt  vcpkg.json
Include/: Application.h  Logger.h  Mesh.h  ModelLoader.h  Renderer.h  Vector.h
Src/: Application.cpp  main.cpp
